<resources>
    <string name="app_name">X-APM</string>
    <string name="app_code_name">X-APM</string>
    <string name="manage_overlay">Manage overlay</string>
    <string name="switch_on_text">Enabled</string>
    <string name="switch_off_text">Not enabled</string>
    <string name="test_noter">Password test</string>
    <string name="input_password">%1$s is locked</string>
    <string name="dump_module">Module state</string>
    <string name="title_settings">Settings</string>
    <string name="title_copy_list">Copy the list</string>
    <string name="title_view_photos">View visitors</string>
    <string name="title_take_photo">Capture visitors</string>
    <string name="title_dev_mode">Debug mode</string>
    <string name="title_exp">Experiment</string>
    <string name="title_advance">Advance</string>
    <string name="summary_dev_mode">Activate log output, will increase power consumption. No need for non-developers</string>
    <string name="summary_take_photo">When the password is entered incorrectly, try to save a photo of the front camera. Note that the success of the save depends to some extent on the speed of the camera preview of your device and the speed of the input.</string>
    <string name="summary_manage_overlay">我们将使用系统对话框的形式展示解锁界面，因此你必须在系统设置内打开叠加层才能使用最基本的功能。</string>
    <string name="title_basic">Basic</string>
    <string name="title_fullscreen_noter">Fullscreen verifier</string>
    <string name="title_not_available">Not available</string>
    <string name="title_app_ver">Version</string>
    <string name="title_about">About</string>
    <string name="summary_dump_module">Check the inject states.</string>
    <string name="summary_test_noter">测试密码盘在本机的样式以及是否可以正确弹出</string>
    <string name="title_my_act_code">My activation code</string>
    <string name="title_picker">App picker</string>
    <string name="title_setup_passcode">Password settings</string>
    <string name="title_setup_passcode_now">Go to settings</string>
    <string name="summary_setup_passcode_none_set">Password has not been set, application launch will not be verified(App lock).</string>
    <string name="summary_setup_passcode_set">Password has been set</string>
    <string name="title_setup_code_repeat">Confirm</string>
    <string name="title_setup_code_new">Input new</string>
    <string name="title_setup_code_invalid">Password not valid</string>
    <string name="title_setup_code_mismatch">Inconsistent input</string>
    <string name="title_help">User manual</string>
    <string name="title_help_available_pmh">Help</string>
    <string name="title_donate">Donate</string>
    <string name="title_show_system_app">System apps</string>
    <string name="first_run_title">Tips</string>
    <string name="message_first_run">The purpose of this application development is to prevent as much as possible the consumption of system resources by the infrequent APPs. The commonly used APPs do not interfere in any way. Otherwise, they may cause problems in use, waste a lot of time and effort, and even affect their own lives. The effect (except for friends who are willing to take the initiative to solve the problem), so you do not need to use all the features. \n\nThe new version provides some additional minor features for the Play version and donated friends. If you have already donated, go to 'Donate' and check 'I have donated'. Play Edition does not require this setting to use all features.</string>
    <string name="title_hide_pattern">Hide pattern</string>
    <string name="title_use_fp">Use fingerprint</string>
    <string name="title_ver_on_home">Re-verify when app switched</string>
    <string name="summary_always_need_verify">The default mechanism is that applications that have been previously authenticated need to be revalidated when the screen goes out and re-lit. If this option is enabled, it will need to be verified each time.</string>
    <string name="title_reboot_take_effect">Some settings need a reboot to take effect.</string>
    <string name="title_reboot_take_effect_blur">打开和关闭需要重启设备才可以生效</string>
    <string name="title_passcode_wrong">Wrong password, try again</string>
    <string name="title_delete_success">Deleted!</string>
    <string name="title_theme">Theme</string>
    <string name="title_service_connected">Activated</string>
    <string name="title_service_not_connected">Not activated</string>
    <string name="title_service_need_action">Action need</string>
    <string name="theme_def">DEFAULT</string>
    <string name="title_open_source">Source code</string>
    <string name="title_app_recent_blur">Recent blur</string>
    <string name="summary_app_recent_blur">Gaussian blur to the recent task card. may affects system performance.</string>
    <string name="title_default_verifyer">Default verifier</string>
    <string name="summary_app_recent_blur_all">启用该选项全部任务都会被模糊，否则只有需要验证的任务才会</string>
    <string name="title_app_recent_blur_all">Blur all tasks</string>
    <string name="title_allow_third_verifier">Third party verifiers</string>
    <string name="summary_allow_third_verifier">如果启用该选项，第三方开发的密码验证器允许被使用，到时你可以选择使用某一个。\n酷安提供了几种样式的验证器可供选择。\n你也可以自己开发自定义的任何样式的验证器，具体开发文档请参考源代码</string>
    <string name="title_verifier">Verifiers</string>
    <string name="title_ver_on_screenoff">Re-verify after screen off</string>
    <string name="title_service_not_connected_settings">Service not activated</string>
    <string name="crash_module">CRASH Service</string>
    <string name="summary_crash_module">Mock crash once</string>
    <string name="title_thanks">Thanks</string>
    <string name="summary_can_not_hook_home">无法Hook home，功能不可用</string>
    <string name="title_crop_enabled">Clip to round icon</string>
    <string name="title_show_app_icon">Show app icon</string>
    <string name="verifier_settings">View settings</string>
    <string name="title_width">Width</string>
    <string name="title_height">Height</string>
    <string name="title_btn_size">Button size</string>
    <string name="title_text_size">Text size</string>
    <string name="title_app_uninstall_pro">Uninstall/Data protect</string>
    <string name="summary_app_uninstall_pro">Prevents adb/installer from uninstalling/clearing-data protected apps, and if you want to uninstall/clear-data for X-APM, this feature must be disabled first.</string>
    <string name="title_hide_app_icon">Hide app icon</string>
    <string name="title_secure">Secure</string>
    <string name="title_personal">Personal</string>
    <string name="title_verify_method">Locker</string>
    <string name="title_verify_pin">PIN</string>
    <string name="title_verify_pattern">Pattern</string>
    <string name="title_others">Others</string>
    <string name="title_camera">Camera</string>
    <string name="title_password">Unlock</string>
    <string name="title_verify_settings">Verify</string>
    <string name="title_themes">Theme</string>
    <string name="title_service">Service</string>
    <string name="title_app">App</string>
    <string name="title_app_guard">App lock</string>
    <string name="title_app_boot">Boot blocker</string>
    <string name="title_app_auto_start">Start blocker</string>
    <string name="title_clearn">Boost</string>
    <string name="title_app_mem_boost">Memory cleaner</string>
    <string name="title_app_rf_kill">Back kill</string>
    <string name="clear_process">Clear memory</string>
    <string name="clear_process_now">Clear now</string>
    <string name="clear_process_complete_with_num">%1$s apps cleared，nice!</string>
    <string name="clear_process_complete">Cleared, nice!</string>
    <string name="summary_app_guard">以下应用在启动时需要经过密码验证。</string>
    <string name="summary_boot_app">"禁止以下应用开机自动启动。\n\n提示，尽管你禁止了某些应用开机自启动，某些应用开机后仍有可能被其他应用/广播启动，如果想要禁止，请同时设置关联启动。"</string>
    <string name="summary_lock_kill_app">"以下应用在点击立即清理，或者锁屏后会被强行停止。为了提升用户体验，锁屏清理过程中，任何和设备交互的行为都会中断清理过程。\n\n注意，为了防止错过重要通知，默认情况下在对选中应用进行清理时，会跳过有通知消息的应用，你可以到通用设置中更改此项设定。"\n\n为什么有的应用锁屏没有被清理？请检查是否开启了保护通知应用设置，或者是否开启了保护具有音频焦点应用的设置。</string>
    <string name="summary_rf_kill_app">"以下应用在按返回键退出后会被强行停止。"</string>
    <string name="summary_tr_kill_app">"以下应用在从最近任务划掉后会被强行停止。"</string>
    <string name="summary_start_app">"禁止以下应用被其他应用（通过服务或者广播）启动（微信和支付宝建议不要加入，否则可能无法发起付款，输入法建议也不要禁止，否则无法唤起输入）。"</string>
    <string name="app_intro">1. 你需要在 Xposed installer 中激活 应用管理 模块，并且重启才可以使用下面的功能。
        Xposed installer 需要接收广播，以获取模块更新通知，如果无法激活请确保你没有对 Xposed installer 做任何限制处理，并且可以尝试重新勾选，重启。</string>
    <string name="app_intro_need_restart">应用更新后需要重新启动设备，否则系统可能无法正常工作。</string>
    <string name="redemption_need_restart">已经退出自救模式，重启生效。</string>
    <string name="title_restart_android">软重启</string>
    <string name="title_block_viewer">启动记录</string>
    <string name="title_restrict">限制</string>
    <string name="done">完成</string>
    <string name="clearing_process_app">正在杀掉%1$s…</string>
    <string name="summary_verify_on_home">该功能目前还不稳定，某些应用可能无法适用，如果发现问题请关闭该选项</string>
    <string name="summary_verify_on_screenoff">建议开启以提高安全性</string>
    <string name="title_transaction_expire">过期请求，已忽略</string>
    <string name="title_wrong_pwd">密码错误，请重试</string>
    <string name="fail_show_internal_lockview">无法显示内部验证窗口</string>
    <string name="input_previous_password">请输入原来的密码</string>
    <string name="input_new_password">请输入新的密码</string>
    <string name="app_lock_need_unlock">需要验证密码以继续</string>
    <string name="title_general_settings">基本设置</string>
    <string name="lk_delay">清理延时</string>
    <string name="block_record_summary">阻止%1$s次，允许%2$s次\n最近尝试启动于%3$s，类型%4$s，结果%5$s，原因%6$s，启动者%7$s。</string>
    <string name="title_component_editor">组件控制- %1$s</string>
    <string name="tab_text_1">服务</string>
    <string name="tab_text_2">广播</string>
    <string name="tab_text_3">活动</string>
    <string name="nf_tab_text_1">移动数据</string>
    <string name="nf_tab_text_2">WIFI</string>
    <string name="summary_service_info_process"><b>进程：</b>%1$s</string>
    <string name="summary_service_info_comp">%1$s</string>
    <string name="summary_service_info_comp_maybe_ad">疑似广告</string>
    <string name="title_component_manager">我的应用</string>
    <string name="title_export_service_settings">导出服务配置</string>
    <string name="title_export_broadcast_settings">导出广播配置</string>
    <string name="title_import_service_settings">导入服务配置</string>
    <string name="title_import_broadcast_settings">导入广播配置</string>
    <string name="action_settings">设置</string>
    <string name="title_feedback">反馈</string>
    <string name="title_unlock_vibrate_enabled">解锁成功震动</string>
    <string name="title_error_vibrate_enabled">解锁失败震动</string>
    <string name="summary_unlock_vibrate_enabled">同时会修改屏幕解锁的设置</string>
    <string name="summary_error_vibrate_enabled">同时会修改屏幕解锁的设置</string>
    <string name="title_select_all">Select all</string>
    <string name="title_search">Search</string>
    <string name="title_pull_from_server">从服务器获取预置规则</string>
    <string name="title_export_comp_replacements">导出我的规则</string>
    <string name="title_import_comp_replacements">Import from file</string>
    <string name="title_tools">工具箱</string>
    <string name="title_activity_user_giude">用户向导</string>
    <string name="message_user_giude1">这是一份不得不写的声明，请仔细阅读。\n\n1. 关于应用管理数据，为了实现开机自启动限制，我们必须把某些数据存放到系统某个目录下，我们提供了删除数据的功能，如果你介意请退出！\n\n2. 关于内存占用，应用管理本身无需后台运行，你随时可以杀死。前台运行占用部分运行内存，如果你介意请退出！\n\n3. 关于稳定性，ROM众多，可能你的设备并不兼容，会导致一些使用上的问题，如果你介意，请退出！\n\n4. 关于bug，非常感谢所有朋友的bug反馈，本人会利用闲暇时间进行维护。\n\n本程序提供的高级功能，例如组件编辑，绿化等，使用不当可能会导致应用闪退等，请使用前仔细看好说明。\n\n最后感谢支持与理解！！！</string>
    <string name="user_notice_no">与我期望的不同</string>
    <string name="user_notice_yes">我觉得还行</string>
    <string name="desc_play_version">Play版本有啥区别？</string>
    <string name="desc_play_version_a">\n要0.99美刀！</string>
    <string name="title_get_play_now">前往Play下载</string>
    <string name="title_import_old_comp_replacements">导入旧版数据</string>
    <string name="user_notice_title">老用户可快速跳过</string>
    <string name="title_main_status">tatus</string>
    <string name="title_manage">管理</string>
</resources>