<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory android:title="@string/title_basic">
        <Preference
            android:key="@string/title_setup_passcode"
            android:summary="@string/summary_setup_passcode_none_set"
            android:title="@string/title_setup_passcode" />

        <SwitchPreference
            android:defaultValue="false"
            android:enabled="true"
            android:key="key_full_screen_noter"
            android:title="@string/title_fullscreen_noter" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="always_note"
            android:enabled="false"
            android:summary="@string/summary_always_need_verify"
            android:title="@string/title_always_need_verify" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_advance">

        <Preference
            android:key="@string/manage_overlay"
            android:summary="@string/summary_manage_overlay"
            android:title="@string/manage_overlay" />

        <Preference
            android:key="@string/test_noter"
            android:summary="@string/summary_test_noter"
            android:title="@string/test_noter" />

        <Preference
            android:key="@string/dump_module"
            android:summary="@string/summary_dump_module"
            android:title="@string/dump_module" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="dev_mode_enabled"
            android:summary="@string/summary_dev_mode"
            android:title="@string/title_dev_mode" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_exp">

        <SwitchPreference
            android:defaultValue="false"
            android:enabled="false"
            android:key="fp_enabled"
            android:title="@string/title_use_fp" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="key_take_photo_enabled"
            android:summary="@string/summary_take_photo"
            android:title="@string/title_take_photo" />

        <Preference
            android:key="@string/title_view_photos"
            android:title="@string/title_view_photos" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_about">

        <Preference
            android:key="@string/title_app_ver"
            android:title="@string/title_app_ver" />

        <Preference
            android:key="@string/title_my_act_code"
            android:title="@string/title_my_act_code" />

    </PreferenceCategory>


</PreferenceScreen>