<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/title_feedback">

        <SwitchPreference
            android:defaultValue="true"
            android:key="unlock_vibrate_enabled"
            android:title="@string/title_unlock_vibrate_enabled"
            android:persistent="false"
            android:summary="@string/summary_unlock_vibrate_enabled" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="error_vibrate_enabled"
            android:persistent="false"
            android:title="@string/title_error_vibrate_enabled"
            android:summary="@string/summary_error_vibrate_enabled" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_themes">

        <ListPreference
            android:defaultValue="@string/theme_def"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_entries"
            android:key="theme"
            android:title="@string/title_theme" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="show_app_icon_enabled"
            android:title="@string/title_show_app_icon" />

        <SwitchPreference
            android:defaultValue="false"
            android:dependency="show_app_icon_enabled"
            android:key="key_crop_circle_enabled"
            android:title="@string/title_crop_enabled" />

    </PreferenceCategory>

</PreferenceScreen>