<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_phone_android_black_24dp"
        android:title="@string/title_main_status" />

    <item
        android:id="@+id/navigation_manage"
        android:icon="@drawable/ic_extension_black_24dp"
        android:title="@string/title_manage" />

    <item
        android:id="@+id/navigation_tools"
        android:icon="@drawable/ic_pan_tool_black_24dp"
        android:title="@string/title_tools" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_settings" />

    <item
        android:id="@+id/navigation_about"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/title_about" />

</menu>
