<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/app_name" />
    </group>

    <item android:title="@string/title_others">
        <menu>
            <item
                android:id="@+id/action_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/action_tools"
                android:icon="@drawable/ic_pan_tool_black_24dp"
                android:title="@string/action_tools" />
            <item
                android:id="@+id/action_help"
                android:icon="@drawable/ic_help_black_24dp"
                android:title="@string/title_help" />
            <item
                android:id="@+id/action_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/title_about" />
        </menu>
    </item>

</menu>
