<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_info_white_24dp"
        android:title="@string/app_name"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_select_all_white_24dp"
        android:title="@string/title_select_all"
        android:visible="false"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_block_record_viewer"
        android:icon="@drawable/ic_build_white_24dp"
        android:title="@string/title_block_viewer"
        app:showAsAction="never" />

    <!--<item-->
    <!--android:id="@+id/action_start_block_notify"-->
    <!--android:checkable="true"-->
    <!--android:checked="true"-->
    <!--android:icon="@drawable/ic_noti_start_block"-->
    <!--android:title="@string/title_start_block_notify"-->
    <!--app:showAsAction="never" />-->
</menu>