<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/appbar_padding_top"
            android:theme="@style/AppThemeLight.AppBarOverlay"
            app:elevation="0dp">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_weight="1"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/AppThemeLight.PopupOverlay"
                app:theme="?torToolbarTheme"
                app:title="@string/title_activity_user_giude">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            style="@style/CardCommon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_horizontal_margin_tiny"

            card_view:cardCornerRadius="1dp"
            card_view:cardElevation="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/intro_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:fadingEdge="horizontal"
                    android:maxLines="30"
                    android:padding="@dimen/activity_horizontal_margin_small"
                    android:text="@string/user_notice_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/accent"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/intro_text"
                    style="@style/ListItemMainText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:fadingEdge="horizontal"
                    android:maxLines="30"
                    android:padding="@dimen/activity_horizontal_margin_small"
                    android:text="@string/message_user_giude1" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_notice_no"
            android:textColor="@color/white"
            android:theme="@style/ButtonBarGuide" />

        <Button
            android:id="@+id/yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_notice_yes"
            android:textColor="@color/white"
            android:theme="@style/ButtonBarGuide" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>